--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     width: 100%;
+    height:100%;
     margin: 0;
-    background: black;
+    background:/*whitesmoke*/black;
 }
 
 header{
@@ -29,16 +30,17 @@ h1 {
     font-size:3vw;
     margin:1.5% 0 1.5% 0;
 }
-
+section{
+    height:auto;
+    width:100%;
+}
 
 .photo {
-    background-image:url(img/001.jpg);
-    background-position:center;
-    display: block;
-    border:1px white solid;
-    height:300px;
     width:30%;
-    border-radius:30% 10% 30% 10%;
+    height:90%;
+    margin:1%;
+    border:2px black solid;
+    border-radius:25% 0% 25% 0%;
     
 }
 
@@ -132,9 +134,6 @@ h1 {
     border: 2px solid grey;
 }
 
-.all {
-    background: black;
-}
 
 .box {
     border: 2px solid white;
