--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     height:100%;
     margin: 0;
-    background:/*whitesmoke*/black;
+    background:whitesmoke;
 }
 
 header{
@@ -36,12 +36,36 @@ section{
 }
 
 .photo {
-    width:30%;
-    height:90%;
+    width:50%;
+    height:100%;
     margin:1%;
     border:2px black solid;
     border-radius:25% 0% 25% 0%;
     
+}
+
+.cover{
+    background:white;
+    color:black;
+    padding:1%;
+    border:2px solid black;
+    border-radius: 50px 50px 50px 50px;
+    text-align:left;
+    margin:0.5%
+}
+
+.tex{
+    margin:1%;
+}
+
+.center{
+    margin-left:5%;
+}
+h3 {
+    font-size:2vw;
+    margin:0;
+    font-family: 'Lobster', cursive;
+    color:black;
 }
 
 .flero {
@@ -152,12 +176,7 @@ section{
 h2 {
     font-family: 'Merriweather', serif;
     color: white;
-    padding-left: 2%;
-    padding-right: 10%;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    background: grey;
-    border-bottom: 1px solid white;
+    
 }
 
 .btnf{
@@ -177,6 +196,7 @@ a{
 
 footer {
     background: grey;
+    height:100%;
     padding: 4%;
     display: flex;
     flex-direction: row;
@@ -190,27 +210,21 @@ footer a {
 
 }
 
-h3 {
-    font-family: 'Indie Flower', cursive;
-    color: white;
-}
+
 
 h4 {
     font-family: 'Lobster', cursive;
-    color: white;
+    color: black;
 }
 
-
-
-.shop:hover {
-    transform: scale(1.2)
+.copy {
+    transform-origin: 50% 50%;
+    animation: jump .5s linear alternate infinite;
+    text-align: center;
 }
 
-
-.shop {
-    margin: 3% 2% 2% 2%;
-    font-size: 5vh;
-    color: white;
+ul,li{
+    margin:0;
 }
 
 @keyframes glissement {
@@ -239,8 +253,3 @@ h4 {
     }
 }
 
-.copy {
-    transform-origin: 50% 50%;
-    animation: jump .5s linear alternate infinite;
-    text-align: center;
-}
