--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ h2 {
 
 .mail:hover {
     border: 1px dashed black;
-    background: linear-gradient(to bottom right, #00b2ff, #00b2ff, white);
+      background: linear-gradient(to bottom right,pink,red);
     color:white;
 }
 .twitter:hover {
