--- a/style.css
+++ b/style.css
@@ -22,7 +22,15 @@ body {
     font-size:4vw;
 }
 
+.menu{
+    text-decoration:none;
+    color:black;
+    margin:1.3% 0 1% 2%;
+}
 
+.menu:hover{
+    color:grey;
+}
 
 h1{
     font-family: 'Yanone Kaffeesatz', sans-serif;
@@ -69,7 +77,7 @@ section{
     margin-left:5%;
 }
 h3 {
-    font-size:3vw;
+    font-size:150%;
     margin:0;
     font-family: 'Lobster', cursive;
     color:black;
@@ -348,7 +356,7 @@ ul,li{
 .fa-hdd{
     color:black;
     font-size:4vw;
-    margin:1.5% 0 1.5% 2%;
+    margin:1.5% 0 2% 2%;
 }
 
 
