--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ section{
     margin-left:5%;
 }
 h3 {
-    font-size:150%;
+    font-size:3vw;
     margin:0;
     font-family: 'Lobster', cursive;
     color:black;
@@ -270,10 +270,7 @@ h2 {
 
 
 
-.LOG {
-    height: auto;
-    width: 100%;
-}
+
 
 
 
@@ -376,23 +373,28 @@ ul,li{
 
 
 .par{
-    margin:auto;
+    padding: 1%;
+    width:100%;
     display:flex;
+  /*  flex-wrap:wrap;*/
 }
 
 
 figure{
-  width:80%;
-  height:50;
-  /* border-radius:5% 0% 5% 0%; */
+  width:90%;
+  height:auto;
   box-shadow: 3px 3px 5px grey;
   padding:0.5%;
+  margin:0 0 1.5% 0;
 }
+
+
 
 figcaption{
   text-align: center;
   font-style:italic;
   font-size: 1em;
+  margin:0;
 }
 
 .sale{
