--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
 body {
-    width:98%;
+    width:auto;
     height:100%;
     background:whitesmoke;
     margin:0px;
-    display: block;
-    -webkit-margin-right:0px;
-    -webkit-margin-left:0px;
-    -webkit-margin-bottom:0px;
-    -webkit-margin-top:0px;
+    display:block;
+    padding:0px;
 
 }
 
@@ -24,7 +21,7 @@ body {
     border:1px solid black;
     border-radius: 50px 50px 50px 50px;
     text-align:center;
-    margin:1% 1% 0 1%;
+    margin:0.5%;
 }
 
 
@@ -60,7 +57,7 @@ h2 {
     margin-left:3%;
     font-family: 'Righteous', cursive;
     color: black;
-    margin:0;
+    margin:0px;
 
 }
 
@@ -69,13 +66,14 @@ h3 {
     margin:0;
     font-family: 'Lobster', cursive;
     color:black;
-    margin:0;
+    margin:0px;
 }
 
 h4 {
     font-family: 'Lobster', cursive;
+    font-size:2.4vw;
     color: black;
-    margin:0;
+    margin:0px;
 }
 
 p{  
@@ -86,19 +84,13 @@ p{
 }
 
 a{
-    text-decoration: none
+    text-decoration: none;
 }
 
 li{
     font-size:2;
 }
 
-
-section{
-    height:auto;
-    width:100%;
-
-}
 
 .photo {
     width:50%;
@@ -116,7 +108,6 @@ section{
     border-top:3px double black;
     text-align:center;
     margin:5% 0% 3% 0%;
-    width:100%;
 }
 
 .text{
@@ -126,6 +117,30 @@ section{
 .center{
     margin-left:5%;
 }
+
+.products{
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .btnf{
@@ -257,7 +272,6 @@ footer {
     margin-top:5%;
     background:whitesmoke;
     height:2%;
-    width:98%;
     padding: 2%;
 }
 
@@ -300,21 +314,20 @@ ul,li li,p{
 
 .sale{
     display: flex;
-    position:static;
-    /* border-radius:5% 5% 5% 5%; */
-    box-shadow: 3px 3px 5px grey;
-    width:100%;
-    height:auto;
-    padding:2%;
-
+    box-shadow: 10px 10px 15px grey;
+    padding:3%;
+    margin:2%;
+    justify-content:flex-start;
 }
 
+.pot{
+  width:40%;  
+}
 .detailes{
-    position:absolute;
-    left:50%;
-    padding:2%;
+    width:80%; 
+    padding:1%;
+    text-align:left;
 }
-
 
 .pot img{
     position:relative;
@@ -328,7 +341,7 @@ ul,li li,p{
     padding:0 1% 0 1% ;
     border-radius:25px;
     width:40%;
-    height:100%;
+    height:auto;
     background:white;
     text-align: center;
     margin:auto;
@@ -339,7 +352,7 @@ ul,li li,p{
 .detailes h3{
     font-family: 'Poiret One', cursive;
     font-size:3vw;
-    width:110%;
+    width:auto;
 }
 
 @media only screen and (max-width: 1024px) {
