--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background:whitesmoke;
     margin:0px;
     display:block;
-    padding:0px;
+    padding:3% 0 0 0;
 
 }
 
@@ -29,7 +29,6 @@ body {
     border:1px solid black;
     border-radius: 50px 50px 50px 50px;
     text-align:center;
-    margin:0.5%;
 }
 
 
