--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background:whitesmoke;
     margin:0px;
     display:block;
-    padding:3% 0 0 0;
+    padding:1% 0 0 0;
 
 }
 
@@ -21,7 +21,7 @@ body {
     border:1px solid black;
     border-radius: 50px 50px 50px 50px;
     text-align:center;
-    margin:0.5%
+    margin:0.5%;
 }
 
 .storehead{
@@ -29,6 +29,7 @@ body {
     border:1px solid black;
     border-radius: 50px 50px 50px 50px;
     text-align:center;
+    margin:1%;
 }
 
 
@@ -366,6 +367,18 @@ ul,li li,p{
     margin:10% 0 0 0 ;
     border:1px solid black;
 }
+
+.line{
+    border-bottom:black solid 2px;
+}
+
+
+
+
+
+
+
+
 
 @keyframes shaaw {
     0% {box-shadow: 5px 5px 10px grey;transform: rotateX(0deg); transform: rotate(0deg);}
