--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ h4 {
 }
 
 h5 {
-    font-size:2vw;
+    font-size:2.5vw;
     margin:0px;
     font-family: 'Electrolize', sans-serif;
 }
@@ -373,7 +373,12 @@ ul,li li,p{
 }
 
 
-
+audio{
+    width:90%;
+    border:#42d4f4 solid 2px;
+    border-radius:25px;
+    outline:none;
+}
 
 
 
