--- a/style.css
+++ b/style.css
@@ -337,6 +337,13 @@ ul,li li,p{
     justify-content:flex-start;
 }
 
+.dj{
+    box-shadow: 10px 10px 15px grey;
+    padding:3%;
+    margin:2%;
+    justify-content:flex-start;
+}
+
 .pot{
     width:40%;  
 }
@@ -364,8 +371,19 @@ ul,li li,p{
     width:50%;
     height:auto;
     text-align: center;
-    margin:10% 0 0 0 ;
     border:1px solid black;
+}
+
+.btndj{
+    background:linear-gradient(#9efaff,whitesmoke);
+    text-align:center;
+    padding:1% 2% 1% 2%;
+    border-radius:5px;
+    width:80%;
+    height:auto;
+    text-align: center;
+    border:1px solid black;
+    margin:1%;
 }
 
 .line{
